# apecs-generic

./: CHANGELOG.md  README.md  apecs-generic.cabal
lib/Apecs/: Vinyl.hs
