cabal-version:       2.0

name:                apecs-generic
version:             0.1.0.0
synopsis:            Generic/anonymous worlds for the Apecs ECS
description:         See the README
homepage:            https://github.com/Solonarv/apecs-generic#README
license:             MIT
license-file:        LICENSE
author:              Solonarv
maintainer:          nstamm@gmx.de
copyright:           2018 Nicolas Stamm
category:            Game
build-type:          Simple
extra-source-files:  CHANGELOG.md, README.md

library
  exposed-modules:     Apecs.Vinyl
  -- other-modules:
  other-extensions:    UndecidableInstances
  build-depends:       base >=4.12 && <4.13
                     , apecs >= 0.5.1.0 && < 0.8
                     , vinyl ^>= 0.10.0
                     , mtl ^>= 2.2.2
  hs-source-dirs:      lib
  default-language:    Haskell2010
  default-extensions:  TypeOperators, TypeApplications, ScopedTypeVariables, DataKinds, FlexibleInstances
                     , MultiParamTypeClasses, FlexibleContexts
